--- a/index.html
+++ b/index.html
@@ -4,12 +4,69 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Brainee Bees Academy</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Brainee Bees International Play School and Academy - Offering Playschool, Tuition, Yoga, Handwriting, Spoken English, Japanese, Hindi classes in Chennai.">
+  <meta name="keywords" content="playschool in Chennai, yoga for kids, spoken english, handwriting classes, japanese classes, hindi tuition, Brainee Bees Academy">
+  <meta name="author" content="Brainee Bees">
+
+  <!-- Stylesheet -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Welcome to Brainee Bees International Play School</h1>
-  <p>We offer Playschool, Tuition, Yoga, Handwriting, Spoken English, Japanese & Hindi Classes.</p>
+  <!-- Animated Background -->
+  <canvas id="bg-canvas"></canvas>
 
+  <!-- Hero Section -->
+  <div class="hero">
+    <h1>Brainee Bees International Play School</h1>
+    <p>Where Curiosity Meets Joyful Learning</p>
+    <a href="#admissions-form" class="btn">Enroll Now</a>
+  </div>
+
+  <!-- Admissions Form -->
+  <section id="admissions-form">
+    <h2>Admissions Form</h2>
+    <form>
+      <input type="text" placeholder="Parent Name" required />
+      <input type="text" placeholder="Child Name" required />
+      <input type="text" placeholder="Class / Age Group" required />
+      <input type="email" placeholder="Email" required />
+      <button type="submit">Submit</button>
+    </form>
+  </section>
+
+  <!-- Contact Form -->
+  <section>
+    <h2>Contact Us</h2>
+    <form>
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Email" required />
+      <textarea placeholder="Your Message" rows="4"></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+
+  <!-- Location -->
+  <section>
+    <h2>Our Location</h2>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18...YOUR_MAP_LINK_HERE..."
+      width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy">
+    </iframe>
+  </section>
+
+  <!-- Gallery -->
+  <section>
+    <h2>Gallery</h2>
+    <div class="gallery">
+      <img src="assets/photo1.jpg" alt="Classroom">
+      <img src="assets/photo2.jpg" alt="Yoga Class">
+      <img src="assets/photo3.jpg" alt="Kids Activity">
+    </div>
+  </section>
+
+  <!-- Script -->
   <script src="script.js"></script>
 </body>
 </html>
