--- a/index.html
+++ b/index.html
@@ -1,72 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Brainee Bees Academy</title>
-
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Brainee Bees International Play School and Academy - Offering Playschool, Tuition, Yoga, Handwriting, Spoken English, Japanese, Hindi classes in Chennai.">
-  <meta name="keywords" content="playschool in Chennai, yoga for kids, spoken english, handwriting classes, japanese classes, hindi tuition, Brainee Bees Academy">
-  <meta name="author" content="Brainee Bees">
-
-  <!-- Stylesheet -->
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Brainee Bees Academy – Ignite Curiosity, Inspire Brilliance</title>
+  <meta name="description" content="Brainee Bees Academy offers world-class early education programs in Chennai including playschool, tuitions, yoga, handwriting, spoken English, Japanese, and Hindi classes.">
+  <meta name="keywords" content="Brainee Bees, playschool Chennai, tuition center, yoga for kids, handwriting classes, spoken english, japanese classes, hindi classes">
+  <meta name="author" content="Brainee Bees Academy">
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Animated Background -->
-  <canvas id="bg-canvas"></canvas>
+  <div class="animated-bg"></div>
 
-  <!-- Hero Section -->
-  <div class="hero">
-    <h1>Brainee Bees International Play School</h1>
-    <p>Where Curiosity Meets Joyful Learning</p>
-    <a href="#admissions-form" class="btn">Enroll Now</a>
-  </div>
+  <header class="navbar">
+    <h1 class="logo">Brainee Bees Academy 🐝</h1>
+    <nav>
+      <a href="#programs">Programs</a>
+      <a href="#about">About Us</a>
+      <a href="#admissions">Admissions</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-  <!-- Admissions Form -->
-  <section id="admissions-form">
-    <h2>Admissions Form</h2>
-    <form>
-      <input type="text" placeholder="Parent Name" required />
-      <input type="text" placeholder="Child Name" required />
-      <input type="text" placeholder="Class / Age Group" required />
-      <input type="email" placeholder="Email" required />
-      <button type="submit">Submit</button>
-    </form>
+  <section class="hero">
+    <h2>Where Young Minds Bloom</h2>
+    <p>Brainee Bees International Play School offers a joyful, nurturing environment where kids play, learn, and grow with confidence.</p>
+    <a href="#admissions" class="btn">Join the Hive Today 🐝</a>
   </section>
 
-  <!-- Contact Form -->
-  <section>
-    <h2>Contact Us</h2>
-    <form>
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Email" required />
-      <textarea placeholder="Your Message" rows="4"></textarea>
-      <button type="submit">Send Message</button>
-    </form>
+  <section id="programs" class="programs">
+    <h2>Our Programs</h2>
+    <ul>
+      <li><strong>Playschool:</strong> Montessori-based playful learning for ages 2–5</li>
+      <li><strong>Tuitions:</strong> Personalized academic support from KG to Grade 8</li>
+      <li><strong>Yoga:</strong> Mind-body wellness sessions for children</li>
+      <li><strong>Handwriting:</strong> Beautiful script development with fun techniques</li>
+      <li><strong>Spoken English:</strong> Fluent, confident communication skills</li>
+      <li><strong>Japanese & Hindi:</strong> Language learning through games & stories</li>
+    </ul>
   </section>
 
-  <!-- Location -->
-  <section>
-    <h2>Our Location</h2>
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18...YOUR_MAP_LINK_HERE..."
-      width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy">
-    </iframe>
+  <section id="about" class="about">
+    <h2>Why Brainee Bees?</h2>
+    <p>At Brainee Bees, we believe learning should be magical. Our curriculum combines creativity, curiosity, and care — guided by passionate educators who light the path for your child's lifelong learning journey.</p>
+    <blockquote>
+      "We nurture not just students, but little thinkers, creators, and global citizens."
+    </blockquote>
   </section>
 
-  <!-- Gallery -->
-  <section>
-    <h2>Gallery</h2>
-    <div class="gallery">
-      <img src="assets/photo1.jpg" alt="Classroom">
-      <img src="assets/photo2.jpg" alt="Yoga Class">
-      <img src="assets/photo3.jpg" alt="Kids Activity">
+  <section id="kids-videos" class="kids-videos">
+    <h2>🌈 Fun & Learning Videos for Kids (Age 3–4)</h2>
+    <p>Brighten your child’s day with songs, colors, numbers, and imaginative play videos — all safe, fun, and educational!</p>
+
+    <div class="video-grid">
+      <iframe src="https://www.youtube.com/embed/1I0gdGUNoyg" title="ABC Song | Alphabet Song for Children" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/I5kY2xj2xF0" title="Colors Song | Learn Colors for Kids" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/EU-Xb6dScuk" title="Shapes Song | Preschool Learning Video" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/Wo5W4h1aG1I" title="Counting Numbers | Learn Numbers 1 to 10" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/e0dJWfQHF8Y" title="Phonics Song for Kids" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/m0vPyz_3ags" title="Learn Animals for Kids" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/dUXk8Nc5qQ8" title="Good Habits for Kids" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/BELlZKpi1Zs" title="Days of the Week Song" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/Rt5zQ1UO6rE" title="Seasons Song | Learn the Four Seasons" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/J1GN4kqf59s" title="Fun Craft Ideas for Toddlers" frameborder="0" allowfullscreen></iframe>
+    </div>
+
+    <div class="kids-ideas">
+      <h3>🎨 Creative Learning Ideas at Home</h3>
+      <ul>
+        <li>🧩 DIY Color Sorting with Cups</li>
+        <li>✂️ Paper Collage with Shapes</li>
+        <li>📦 Build a Zoo Using Toys & Boxes</li>
+        <li>🔤 Alphabet Hunt Around the House</li>
+        <li>👣 Footprint Painting Fun</li>
+      </ul>
     </div>
   </section>
 
-  <!-- Script -->
+  <section id="admissions" class="admissions">
+    <h2>Admissions Form</h2>
+    <form>
+      <input type="text" placeholder="Parent Name" required>
+      <input type="text" placeholder="Child Name" required>
+      <input type="text" placeholder="Class / Age Group" required>
+      <input type="email" placeholder="Email" required>
+      <button type="submit">Submit Application</button>
+    </form>
+  </section>
+
+  <section id="contact" class="contact">
+    <h2>Contact Us</h2>
+    <form>
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Email" required>
+      <textarea placeholder="Your Message" rows="4"></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+    <div class="map">
+      <h3>Visit Us</h3>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18..." width="100%" height="300" style="border:0;" allowfullscreen loading="lazy"></iframe>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <p>© 2025 Brainee Bees Academy. All rights reserved.</p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
