--- a/about.html
+++ b/about.html
@@ -8,6 +8,24 @@
 </head>
 <body>
 
+  <!-- 🌙 Dark Mode Toggle -->
+  <button class="dark-toggle" aria-label="Toggle Dark Mode">🌙</button>
+
+  <!-- ☰ Mobile Navigation -->
+  <nav class="mobile-nav">
+    <button class="nav-toggle">☰</button>
+    <ul class="nav-menu">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="admissions.html">Admissions</a></li>
+      <li><a href="tuitions.html">Tuitions</a></li>
+      <li><a href="languages.html">Languages</a></li>
+      <li><a href="yoga.html">Yoga</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="about.html">About</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero Section -->
   <header class="hero-header">
     <div class="hero-content">
       <h1>About Brainee Bees Academy</h1>
@@ -29,7 +47,7 @@
 
     <section>
       <h2>Our Core Values</h2>
-      <ul style="list-style: none; padding-left: 0;">
+      <ul class="checklist">
         <li>🐝 Joyful Learning</li>
         <li>🧠 Curiosity and Innovation</li>
         <li>🤝 Respect and Empathy</li>
@@ -46,8 +64,16 @@
   </main>
 
   <footer class="footer">
-    <p>© 2025 Brainee Bees Academy, Chennai. All rights reserved.</p>
+    <div class="footer-content">
+      <p>© 2025 Brainee Bees Academy, Chennai. All rights reserved.</p>
+      <div class="social">
+        <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">YouTube</a>
+      </div>
+    </div>
   </footer>
+
+  <!-- 🔝 Back to Top -->
+  <button id="backToTop" title="Back to Top">↑</button>
 
   <script src="script.js"></script>
 </body>
