--- a/admissions.html
+++ b/admissions.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Yoga for Kids – Brainee Bees Academy</title>
+  <title>Admissions – Brainee Bees Academy</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -25,32 +25,28 @@
 
   <header class="hero-header">
     <div class="hero-content">
-      <h1>Kids Yoga & Mindfulness</h1>
-      <p>Calm minds, healthy bodies, joyful hearts</p>
+      <h1>Admissions Open!</h1>
+      <p>Start your child's joyful learning journey with Brainee Bees Academy</p>
       <a href="index.html" class="btn-hero">Back to Home</a>
     </div>
   </header>
 
   <main>
     <section>
-      <h2>Program Highlights</h2>
-      <ul class="checklist">
-        <li>🧘 Fun yoga poses for strength & flexibility</li>
-        <li>😌 Breathing & focus techniques for calm</li>
-        <li>🎵 Music & movement for rhythm & joy</li>
-        <li>🌸 Nature-inspired mindfulness games</li>
-        <li>👨‍👩‍👧 Parent-child yoga sessions (weekends)</li>
-      </ul>
+      <h2>How to Apply</h2>
+      <p>Fill out the form below and our admissions team will contact you with next steps. We encourage early enrollment to ensure seat availability.</p>
     </section>
 
     <section>
-      <h2>Book a Trial Session</h2>
+      <h2>Admission Form</h2>
       <form>
-        <input type="text" placeholder="Parent's Name" required />
-        <input type="text" placeholder="Child's Name" required />
-        <input type="tel" placeholder="Phone Number" required />
-        <textarea placeholder="Preferred day & any special needs" rows="4"></textarea>
-        <button type="submit">Book Now</button>
+        <input type="text" placeholder="Child's Full Name" required />
+        <input type="text" placeholder="Parent/Guardian Name" required />
+        <input type="text" placeholder="Age of Child" required />
+        <input type="email" placeholder="Email Address" required />
+        <input type="tel" placeholder="Contact Number" required />
+        <textarea placeholder="Anything you'd like us to know?" rows="4"></textarea>
+        <button type="submit">Submit Application</button>
       </form>
     </section>
   </main>
