--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,24 @@
 </head>
 <body>
 
+  <!-- 🌙 Dark Mode Toggle -->
+  <button class="dark-toggle" aria-label="Toggle Dark Mode">🌙</button>
+
+  <!-- ☰ Mobile Navigation -->
+  <nav class="mobile-nav">
+    <button class="nav-toggle">☰</button>
+    <ul class="nav-menu">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="admissions.html">Admissions</a></li>
+      <li><a href="tuitions.html">Tuitions</a></li>
+      <li><a href="languages.html">Languages</a></li>
+      <li><a href="yoga.html">Yoga</a></li>
+      <li><a href="handwriting.html">Handwriting</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero -->
   <header class="hero-header">
     <div class="hero-content">
       <h1>Our Joyful Gallery</h1>
@@ -34,7 +52,13 @@
 
   <footer class="footer">
     <p>© 2025 Brainee Bees Academy, Chennai. All rights reserved.</p>
+    <div class="social">
+      <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">YouTube</a>
+    </div>
   </footer>
+
+  <!-- 🔝 Back to Top Button -->
+  <button id="backToTop" title="Back to Top">↑</button>
 
   <script src="script.js"></script>
 </body>
