--- a/languages.html
+++ b/languages.html
@@ -8,58 +8,62 @@
 </head>
 <body>
 
+  <button class="dark-toggle" aria-label="Toggle Dark Mode">🌙</button>
+
+  <nav class="mobile-nav">
+    <button class="nav-toggle">☰</button>
+    <ul class="nav-menu">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="admissions.html">Admissions</a></li>
+      <li><a href="tuitions.html">Tuitions</a></li>
+      <li><a href="languages.html">Languages</a></li>
+      <li><a href="yoga.html">Yoga</a></li>
+      <li><a href="handwriting.html">Handwriting</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+    </ul>
+  </nav>
+
   <header class="hero-header">
     <div class="hero-content">
-      <h1>Language Programs</h1>
-      <p>Empowering children to speak with confidence in English, Japanese, and Hindi</p>
+      <h1>Language Enrichment</h1>
+      <p>Helping children express themselves fluently in English, Japanese & Hindi</p>
       <a href="index.html" class="btn-hero">Back to Home</a>
     </div>
   </header>
 
   <main>
     <section>
-      <h2>Why Language Learning Matters</h2>
-      <p>At Brainee Bees, we believe that language builds confidence, opens doors, and connects young learners to the world. Our programs are designed with games, stories, songs, and cultural activities to make learning fun and effective.</p>
-    </section>
-
-    <section>
-      <h2>Our Language Programs</h2>
-      <ul style="text-align: left; max-width: 600px; margin: auto;">
-        <li>🗣️ <strong>Spoken English:</strong> Vocabulary, conversation, storytelling, and public speaking for ages 5+</li>
-        <li>🇯🇵 <strong>Japanese:</strong> Hiragana, numbers, greetings, songs, and animated storytelling (ages 6+)</li>
-        <li>🇮🇳 <strong>Hindi:</strong> Letters, basic words, rhymes, sentence formation with fun games</li>
+      <h2>What We Offer</h2>
+      <ul class="checklist">
+        <li>📘 Spoken English – Confidence building & fluency</li>
+        <li>🇯🇵 Japanese – Basic speaking, Hiragana, greetings</li>
+        <li>🗣️ Hindi – Vocabulary, conversation, storytelling</li>
+        <li>📖 Phonics, grammar & creative writing activities</li>
       </ul>
     </section>
 
     <section>
-      <h2>How We Teach</h2>
-      <ul style="text-align: left; max-width: 600px; margin: auto;">
-        <li>🎭 Interactive storytelling and puppets</li>
-        <li>🎮 Game-based learning for vocabulary and grammar</li>
-        <li>🎤 Daily speaking practice and role play</li>
-        <li>🎧 Listening activities with kid-friendly videos and audios</li>
-        <li>📜 Cultural immersion through crafts and traditions</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Get Started</h2>
+      <h2>Enroll for Language Programs</h2>
       <form>
-        <input type="text" placeholder="Parent's Name" required />
-        <input type="text" placeholder="Child's Name" required />
-        <input type="text" placeholder="Preferred Language (English / Japanese / Hindi)" required />
+        <input type="text" placeholder="Your Name" required />
         <input type="email" placeholder="Email Address" required />
-        <input type="tel" placeholder="Contact Number" required />
-        <textarea rows="4" placeholder="Tell us your expectations or learning goals..."></textarea>
+        <input type="tel" placeholder="Phone Number" required />
+        <textarea placeholder="Preferred language & goals" rows="4"></textarea>
         <button type="submit">Enroll Now</button>
       </form>
     </section>
   </main>
 
   <footer class="footer">
-    <p>© 2025 Brainee Bees Academy, Chennai. All rights reserved.</p>
+    <div class="footer-content">
+      <p>© 2025 Brainee Bees Academy, Chennai. All rights reserved.</p>
+      <div class="social">
+        <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">YouTube</a>
+      </div>
+    </div>
   </footer>
 
+  <button id="backToTop" title="Back to Top">↑</button>
   <script src="script.js"></script>
 </body>
 </html>
