--- a/academics.html
+++ b/academics.html
@@ -8,6 +8,23 @@
 </head>
 <body>
 
+  <!-- 🌙 Dark Mode Toggle -->
+  <button class="dark-toggle" aria-label="Toggle Dark Mode">🌙</button>
+
+  <!-- ☰ Mobile Navigation -->
+  <nav class="mobile-nav">
+    <button class="nav-toggle">☰</button>
+    <ul class="nav-menu">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="admissions.html" class="active">Admissions</a></li>
+      <li><a href="tuitions.html">Tuitions</a></li>
+      <li><a href="languages.html">Languages</a></li>
+      <li><a href="yoga.html">Yoga</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero Section -->
   <header class="hero-header">
     <div class="hero-content">
       <h1>Admissions Open</h1>
@@ -24,7 +41,7 @@
 
     <section>
       <h2>Eligibility</h2>
-      <ul style="text-align: left; max-width: 600px; margin: 0 auto;">
+      <ul class="checklist">
         <li>🐝 Playschool: Age 2 – 5 years</li>
         <li>📘 Tuitions: KG – Grade 8</li>
         <li>🧘 Yoga, 🎨 Arts, ✍️ Handwriting: Age 4+</li>
@@ -34,7 +51,7 @@
 
     <section>
       <h2>Documents Required</h2>
-      <ul style="text-align: left; max-width: 600px; margin: 0 auto;">
+      <ul class="checklist">
         <li>✅ Birth Certificate (copy)</li>
         <li>✅ Passport-sized photos (2)</li>
         <li>✅ ID Proof of Parent/Guardian</li>
@@ -57,8 +74,16 @@
   </main>
 
   <footer class="footer">
-    <p>© 2025 Brainee Bees Academy, Chennai. All rights reserved.</p>
+    <div class="footer-content">
+      <p>© 2025 Brainee Bees Academy, Chennai. All rights reserved.</p>
+      <div class="social">
+        <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">YouTube</a>
+      </div>
+    </div>
   </footer>
+
+  <!-- 🔝 Back to Top -->
+  <button id="backToTop" title="Back to Top">↑</button>
 
   <script src="script.js"></script>
 </body>
