--- a/tuitions.html
+++ b/tuitions.html
@@ -8,6 +8,24 @@
 </head>
 <body>
 
+  <!-- 🌙 Dark Mode Toggle -->
+  <button class="dark-toggle" aria-label="Toggle Dark Mode">🌙</button>
+
+  <!-- ☰ Mobile Navigation -->
+  <nav class="mobile-nav">
+    <button class="nav-toggle">☰</button>
+    <ul class="nav-menu">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="admissions.html">Admissions</a></li>
+      <li><a href="tuitions.html">Tuitions</a></li>
+      <li><a href="languages.html">Languages</a></li>
+      <li><a href="yoga.html">Yoga</a></li>
+      <li><a href="handwriting.html">Handwriting</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero Section -->
   <header class="hero-header">
     <div class="hero-content">
       <h1>Academic Tuitions (KG to Grade 8)</h1>
@@ -24,7 +42,7 @@
 
     <section>
       <h2>Subjects We Cover</h2>
-      <ul style="text-align: left; max-width: 600px; margin: auto;">
+      <ul class="checklist">
         <li>🧮 Mathematics (Conceptual + Applied)</li>
         <li>📖 English (Reading, Grammar, Writing)</li>
         <li>🌍 Science (General, Physics, Biology)</li>
@@ -36,7 +54,7 @@
 
     <section>
       <h2>Unique Features</h2>
-      <ul style="text-align: left; max-width: 600px; margin: auto;">
+      <ul class="checklist">
         <li>📚 Small groups with individual attention</li>
         <li>🧠 Weekly assessments and progress tracking</li>
         <li>📈 Parent-teacher review sessions</li>
@@ -59,8 +77,16 @@
   </main>
 
   <footer class="footer">
-    <p>© 2025 Brainee Bees Academy, Chennai. All rights reserved.</p>
+    <div class="footer-content">
+      <p>© 2025 Brainee Bees Academy, Chennai. All rights reserved.</p>
+      <div class="social">
+        <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">YouTube</a>
+      </div>
+    </div>
   </footer>
+
+  <!-- 🔝 Back to Top Button -->
+  <button id="backToTop" title="Back to Top">↑</button>
 
   <script src="script.js"></script>
 </body>
