--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <li>🎨 Hands-on art and sensory play labs</li>
       <li>🧠 Cognitive games to boost memory and logic</li>
       <li>🌱 Nature and outdoor exploration time</li>
-      <li>🤖 Kids-friendly tech zone with intro to robotics</li>
+      <li>🤖 Kids-friendly tech zone with intro to Admissions</li>
       <li>🎭 Creative expression through music and drama</li>
       <li>📚 Guided reading sessions and story time corners</li>
       <li>👪 Parent engagement workshops</li>
@@ -85,9 +85,9 @@
         <img src="assets/languages.jpg" alt="Languages">
         <div class="overlay"><h3>Spoken English, Japanese, Hindi</h3></div>
       </a>
-      <a href="robotics.html" class="program-card">
-        <img src="assets/robotics.jpg" alt="Robotics">
-        <div class="overlay"><h3>Kids Robotics</h3></div>
+      <a href="Admissions.html" class="program-card">
+        <img src="assets/Admissions.jpg" alt="Admissions">
+        <div class="overlay"><h3>Admissions</h3></div>
       </a>
       <a href="music.html" class="program-card">
         <img src="assets/music.jpg" alt="Music">
