--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <h2>Our Programs</h2>
     <div class="program-grid">
       <a href="playschool.html" class="program-card">
-        <img src="assets/playschool.jpg" alt="Playschool">
+        <img src="C:\Users\Arun2760\Desktop\brainee-bees-website\assets\playschool.jpg" alt="Playschool">
         <div class="overlay"><h3>Playschool</h3></div>
       </a>
       <a href="tuitions.html" class="program-card">
